Set aside links and animation on framework page

--- a/FrontEnd/pages/LanguagesPage/languages.html
+++ b/FrontEnd/pages/LanguagesPage/languages.html
@@ -46,7 +46,7 @@
         <ul class="aside__list">
             <li class="aside__item">
                 <figure class="aside__figure">
-                    <a href="#" class="aside__link">
+                    <a href="../FrameworksPage/frameworks.html" class="aside__link">
                         <img src="./images/frameworks.png" alt="html" class="aside__image">
                     </a>
                     <figcaption class="aside__caption">Frameworks</figcaption>
@@ -65,7 +65,7 @@
         <header class="main__header">
             <h2 class="main__title">Programming Languages</h2>
         </header>
-        <article class="card">
+        <article class="card" id="html">
             <aside class="card__header">
                 <figure class="card__figure">
                     <img class="card__image" src="./images/html-language.png" alt="HTML Logo">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </article>
-        <article class="card">
+        <article class="card" id="css">
             <div class="card__body">
                 <h2 class="card__title">Cascading Style Sheets</h2>
                 <p class="card__copy">
@@ -104,7 +104,7 @@
                 </figure>
             </aside>
         </article>
-        <article class="card">
+        <article class="card" id="javascript">
             <aside class="card__header">
                 <figure class="card__figure">
                     <img class="card__image" src="./images/javascript-language.png" alt="JavaScript Logo">
