--- a/FrontEnd/pages/LanguagesPage/languages.html
+++ b/FrontEnd/pages/LanguagesPage/languages.html
@@ -135,7 +135,7 @@
     
     <footer class="footer">
         <p class="footer__copyright">
-            2021 Copyright © SIMPLE. All right reserved.
+            Created by Alex Lazellari. All right reserved.
         </p>
     </footer>
 
