--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -20,6 +20,7 @@
     <header class="header-nav">
         <nav class="nav">
             <p class="nav__logo">Front End</p>
+            
             <ul class="nav__list">
                 <li class="nav-nav__item">
                     <a href="#" class="nav__link">Home</a>
@@ -80,11 +81,11 @@
             <aside class="main-content__aside">
                 <figure class="main-content__figure">
                     <img class="main-content__image" src="./pages/indexAssets/images/frontend.png" alt="laptop on a desk">
-                    <figcaption>Graphical represantation of front-end development</figcaption>
+                    <figcaption class="main-content__caption">Represantation of front-end development</figcaption>
                 </figure>
                 <figure class="main-content__figure">
                     <img class="main-content__image" src="./pages/indexAssets/images/frontend2.png" alt="laptop on a desk">
-                    <figcaption>Front-end status</figcaption>
+                    <figcaption class="main-content__caption">Front-end status</figcaption>
                 </figure>
             </aside>
             <p class="main-content__paragraph">
@@ -105,7 +106,7 @@
                 application; that is, the part of the website that the user sees and interacts with. They take the
                 backend data and turn it into something that is easily comprehensible, visually pleasing and fully
                 functional for the everyday user. They will work from designs provided by the web designer and bring
-                them to life using <em>HTML, JavaScript and CSS</em> (more on those later!).<br><br>
+                them to life using <em>HTML, JavaScript and CSS</em>.<br><br>
                 The frontend developer implements the website’s layout, interactive and navigational elements such
                 as buttons and scrollbars, images, content and internal links (links that navigate from one page to
                 another within the same website). Frontend developers are also responsible for ensuring optimal
@@ -125,7 +126,7 @@
     <!-- Footer -->
     <footer class="footer">
         <p class="footer__copyright">
-            Created by Alex Lazellari. All right reserved.
+            Created by Alex Lazellari. All rights reserved.
         </p>
     </footer>
     <!-- End Footer -->
