Form, srcset and sizes

--- a/FrontEnd/pages/FrameworksPage/frameworks.html
+++ b/FrontEnd/pages/FrameworksPage/frameworks.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frameworks</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    
     <!-- Common Styles -->
     <link rel="stylesheet" type="text/css" href="../../common/css/common.css">
     <!-- CSS -->
@@ -40,6 +42,9 @@
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__link">Frameworks</a>
+                </li>
+                <li class="nav__item">
+                    <a href="../SupportPage/support.html" class="nav__link" >Support</a>
                 </li>
             </ul>
             
@@ -95,7 +100,7 @@
 
         <section class="main__body">
             <article class="main__article">
-                <h3 class="main__question">What are frameworks and libraries?</h3>
+                <h2 class="main__question">What are frameworks and libraries?</h3>
                 <p class="main__copy">
                     Think of building websites and web apps like building a house—when you set out to build a house, you
                     could create all of your own building materials from scratch and start building without any schematics,
