--- a/FrontEnd/pages/LanguagesPage/languages.html
+++ b/FrontEnd/pages/LanguagesPage/languages.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Languages</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>    
     <!-- Common Styles -->
     <link rel="stylesheet" type="text/css" href="../../common/css/common.css">
     <!-- CSS -->
@@ -42,6 +44,9 @@
                 </li>
                 <li class="nav__item">
                     <a href="../FrameworksPage/frameworks.html" class="nav__link">Frameworks</a>
+                </li>
+                <li class="nav__item">
+                    <a href="../SupportPage/support.html" class="nav__link" >Support</a>
                 </li>
             </ul>
             
@@ -80,7 +85,12 @@
         <article class="card" id="html">
             <aside class="card__header">
                 <figure class="card__figure">
-                    <img class="card__image" srcset="./images/html-language-small.png 280w , ./images/html-language-medium.png 1020w" src="./images/html-language-small.png" alt="HTML Logo">
+                    <img class="card__image" 
+                    srcset="./images/html-language-small.png 150w,
+                     ./images/html-language-medium.png 300w,
+                     ./images/html-language.png 640w"
+                    sizes="(min-width: 820px) 25vw, 30vw"
+                    src="./images/html-language-medium.png" alt="HTML Logo">
                 </figure>
             </aside>
             <div class="card__body">
@@ -112,14 +122,24 @@
             </div>
             <aside class="card__header">
                 <figure class="card__figure">
-                    <img class="card__image" srcset="./images/css-language-small.png 280w , ./images/css-language-medium.png 1020w" src="./images/css-language-small.png" alt="CSS Logo">
+                    <img class="card__image" 
+                    srcset="./images/css-language-small.png 150w,
+                    ./images/css-language-medium.png 300w,
+                    ./images/css-language.png 640w"
+                    sizes="(min-width: 820px) 25vw, 30vw"
+                    src="./images/css-language-small.png" alt="CSS Logo">
                 </figure>
             </aside>
         </article>
         <article class="card" id="javascript">
             <aside class="card__header">
                 <figure class="card__figure">
-                    <img class="card__image" srcset="./images/javascript-language-small.png 280w , ./images/javascript-language-medium.png 1020w" src="./images/javascript-language-small.png" alt="JavaScript Logo">
+                    <img class="card__image" 
+                    srcset="./images/javascript-language-small.png 150w,
+                    ./images/javascript-language-medium.png 300w,
+                    ./images/javascript-language.png 640w"
+                   sizes="(min-width: 820px) 25vw, 30vw"
+                    src="./images/javascript-language-small.png" alt="JavaScript Logo">
                 </figure>
             </aside>
             <div class="card__body">
