--- a/eLibrary/public/404.html
+++ b/eLibrary/public/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Meta authors -->
     <meta name="author" content="Alex Lazellari">
@@ -12,16 +13,28 @@
     <!-- Meta title -->
     <title>eLibrary</title>
     <!-- Meta description -->
-    <meta name="description" content="The purpose of eLibrary is to provide people an easy access to electronic libraries">
+    <meta name="description" content="Invalid path">
     <!-- Meta keywords -->
-    <meta name="keywords" content="ebooks, libraries, books, reading, studying">
+    <meta name="keywords" content="error, 404">
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="../../CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="../../css/404.css">
     <!-- Font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
+
 <body>
-    <h1>Error 404 book not found!</h1>
+
+    <main class="error">
+        <div class="error__box">
+            <h1 class="error__404">404</h1>
+            <h2 class="error__title">OOPS! NOTHING WAS FOUND</h2>
+            <p class="error__content">The page you are looking for might have been removed had its name changed or is
+                temporarily unavailable.</p>
+            <a class="error__link" href="/">GO TO HOMEPAGE</a>
+        </div>
+    </main>
+
 </body>
+
 </html>
