Review add to saved books and bugs fixed

--- a/eLibrary/public/404.html
+++ b/eLibrary/public/404.html
@@ -29,7 +29,7 @@
         <div class="error__box">
             <h1 class="error__404">404</h1>
             <h2 class="error__title">OOPS! NOTHING WAS FOUND</h2>
-            <p class="error__content">The page you are looking for might have been removed had its name changed or is
+            <p class="error__content">The page you are looking for might have been removed, had its name changed or is
                 temporarily unavailable.</p>
             <a class="error__link" href="/">GO TO HOMEPAGE</a>
         </div>
